add vm